--- a/.github/workflows/main_picrossunlimitedapi.yml
+++ b/.github/workflows/main_picrossunlimitedapi.yml
@@ -12,7 +12,8 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-
+      run:
+        working-directory: ./picross-unlimited.api
     steps:
       - uses: actions/checkout@v4
 
