--- a/picross-unlimited.web/package.json
+++ b/picross-unlimited.web/package.json
@@ -36,6 +36,8 @@
     "jsdom": "^24.0.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.2.5",
+    "sass": "^1.77.1",
+    "sass-loader": "^14.2.1",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
     "vitest": "^1.4.0",
