--- a/picross-unlimited.api/picross-unlimited.api/picross-unlimited.api.csproj
+++ b/picross-unlimited.api/picross-unlimited.api/picross-unlimited.api.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
