Fixed Project structure

--- a/picross-unlimited.api/Picross-Unlimited.Tests/Picross-Unlimited.Tests.csproj
+++ b/picross-unlimited.api/Picross-Unlimited.Tests/Picross-Unlimited.Tests.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>picross_unlimted.web</RootNamespace>
+    <RootNamespace>Picross_Unlimited.Tests</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
