--- a/picross-unlimited.api/picross-unlimited.api/picross-unlimited.api.csproj
+++ b/picross-unlimited.api/picross-unlimited.api/picross-unlimited.api.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
-    <RootNamespace>picross_unlimited.api</RootNamespace>
+    <RootNamespace>Picross_Unlimited.Api</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
