Fix issue with Identiy tables not being populated

--- a/picross-unlimited.api/picross-unlimited.api/appsettings.json
+++ b/picross-unlimited.api/picross-unlimited.api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=App2024;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PicrossUnlimited;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
