--- a/.github/workflows/main_picrossunlimitedapi.yml
+++ b/.github/workflows/main_picrossunlimitedapi.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   build:
     runs-on: windows-latest
+    defaults:
       run:
         working-directory: ./picross-unlimited.api
     steps:
@@ -20,7 +21,7 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '8.x'
+          dotnet-version: "8.x"
           include-prerelease: true
 
       - name: Build with dotnet
@@ -37,9 +38,10 @@ jobs:
 
   deploy:
     runs-on: windows-latest
+    if: (github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch')
     needs: build
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -49,7 +51,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: .net-app
-      
+
       - name: Login to Azure
         uses: azure/login@v1
         with:
@@ -61,7 +63,6 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'PicrossUnlimitedAPI'
-          slot-name: 'Production'
+          app-name: "PicrossUnlimitedAPI"
+          slot-name: "Production"
           package: .
-          
