--- a/picross-unlimited.web/Picross-Unlimited.Web.csproj
+++ b/picross-unlimited.web/Picross-Unlimited.Web.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>Picross_Unlimited.Api</RootNamespace>
+    <RootNamespace>Picross_Unlimited.Web</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
