--- a/picross-unlimited.web/package.json
+++ b/picross-unlimited.web/package.json
@@ -21,6 +21,7 @@
     "vuetify": "^3.6.7"
   },
   "devDependencies": {
+    "@mdi/font": "^7.4.47",
     "@playwright/test": "^1.43.0",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
