--- a/picross-unlimited.web/package.json
+++ b/picross-unlimited.web/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "lodash": "^4.17.21",
     "vue": "^3.4.27",
     "vue-router": "^4.3.0",
     "vuetify": "^3.6.7"
@@ -26,6 +27,7 @@
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.6",
+    "@types/lodash": "^4.17.5",
     "@types/node": "^20.12.5",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
