--- a/picross-unlimited.web/package.json
+++ b/picross-unlimited.web/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "lodash": "^4.17.21",
     "vue": "^3.4.27",
     "vue-router": "^4.3.0",
