--- a/.github/workflows/build_and_test_web.yml
+++ b/.github/workflows/build_and_test_web.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "picross-unlimited.web/**"
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
