--- a/.github/workflows/main_picrossunlimited.yml
+++ b/.github/workflows/main_picrossunlimited.yml
@@ -7,12 +7,16 @@ on:
   push:
     branches:
       - main
+    paths:
+      - picross-unlimited.api/**
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: windows-latest
-
+    defaults:
+      run:
+        working-directory: ./picross-unlimited.api
     steps:
       - uses: actions/checkout@v4
 
