chore: update pipelines

--- a/picross-unlimited.api/picross-unlimited.api/appsettings.json
+++ b/picross-unlimited.api/picross-unlimited.api/appsettings.json
@@ -10,8 +10,8 @@
   },
 
   "Jwt": {
-    "Secret": "EWU-CSCD379-2024-Super-Duper-Secret-JWT-Token",
-    "Issuer": "picrossapi.azurewebsite.net",
+    "Secret": "PicrossUnlimited-Secret-JWT-Token",
+    "Issuer": "picrossunlimitedapi.azurewebsites.net",
     "Audience": "Picross.Web",
     "ExpirationInMinutes": 60
   },
