--- a/picross-unlimited.web/package.json
+++ b/picross-unlimited.web/package.json
@@ -12,7 +12,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "postbuild": "cp routes.json dist/"
   },
   "dependencies": {
     "axios": "^1.7.2",
